--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.44.24",
+		"lodash": "^4.17.21",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
+		"tailwindcss": "^3.4.1",
 		"vite": "^5.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"tailwindcss": "^3.4.1"
-	}
+	"type": "module"
 }
