--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.44.24",
+		"flowbite-svelte-icons": "^1.4.5",
 		"lodash": "^4.17.21",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
